@@ -149,6 +149,10 @@ enabled.
 Force the fault status of the CFM module on \fIinterface\fR (or all
 interfaces if none is given) to be \fIstatus\fR.  \fIstatus\fR can be
 "true", "false", or "normal" which reverts to the standard behavior.
+.IP "\fBlldp/neighbor\fR [\fIinterface\fR]"
+Displays detailed information about LLDP neighbors on \fIinterface\fR.
+If \fIinterface\fR is not specified, then it displays detailed information
+about all interfaces with LLDP enabled.
 .IP "\fBstp/tcn\fR [\fIbridge\fR]"
 Forces a topology change event on \fIbridge\fR if it's running STP.  This
 may cause it to send Topology Change Notifications to its peers and flush
